:zap: upd codepen url, some tweaks, upd deps

--- a/index-src.html
+++ b/index-src.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Artur Parkhisenko">
   <meta name="application-name" content="Artur Parkhisenko">
 
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: blob: 'unsafe-inline' 'unsafe-eval' wss://localhost:* https://arturparkhisenko.github.io https://images.unsplash.com/ https://www.google-analytics.com; connect-src 'self' wss://localhost:*; script-src 'self' 'unsafe-inline' data: https://www.google-analytics.com/; style-src 'self'; child-src 'self'; manifest-src 'self'; media-src 'self' blob:; img-src 'self' data: https://source.unsplash.com/ https://images.unsplash.com/ https://www.google-analytics.com;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: blob: 'unsafe-inline' 'unsafe-eval' wss://localhost:* https://arturparkhisenko.github.io https://source.unsplash.com https://images.unsplash.com https://unsplash.it https://www.google-analytics.com; connect-src 'self' wss://localhost:*; script-src 'self' 'unsafe-inline' data: https://www.google-analytics.com; style-src 'self'; child-src 'self'; manifest-src 'self'; media-src 'self' blob:; img-src 'self' data: https://source.unsplash.com https://images.unsplash.com https://unsplash.it https://www.google-analytics.com;">
 
   <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
   <link rel="canonical" href="https://arturparkhisenko.github.io/">
@@ -82,7 +82,7 @@
     <br/>
     <main role="main">
       <strong>&lt;/&gt;</strong>
-      <span itemprop="jobTitle">#engineer</span>
+      <span itemprop="jobTitle">#engineer</span>&nbsp;
       <!--  at <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> -->&amp;&amp; #geek
       <!-- @ <a href="https://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> -->
     </main>
@@ -90,21 +90,22 @@
     <footer role="contentinfo">
       <address>
         <!-- <a itemprop="skype" href="skype:arthur.parkhisenko?chat">Skype</a>, -->
-        <a itemprop="url" href="https://github.com/arturparkhisenko">GitHub</a>,
-        <a itemprop="url" href="https://ua.linkedin.com/in/artur-parkhisenko-21440bb8" target="_blank">LinkedIn</a>,
-        <a itemprop="url" href="https://medium.com/@ikeagold" target="_blank">Medium</a>,
-        <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank" hidden>Google+</a>
+        <a itemprop="url" rel="me" href="https://github.com/arturparkhisenko">GitHub</a>,
+        <a itemprop="url" rel="me" href="https://ua.linkedin.com/in/artur-parkhisenko-21440bb8" target="_blank">LinkedIn</a>,
+        <a itemprop="url" rel="me" href="https://medium.com/@ikeagold" target="_blank">Medium</a>,
+        <a itemprop="url" rel="publisher" href="https://plus.google.com/115456555991025584178?rel=author" target="_blank" hidden>Google+</a>
         <br/>
-		<a itemprop="url" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
-        <a itemprop="url" href="https://codepen.io/ikeagold/" target="_blank">CodePen</a>
-        <a itemprop="url" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>
-        <!-- <a itemprop="url" href="https://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
-        <!-- <a itemprop="url" href="https://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
-        <!-- <a itemprop="url" href="https://www.codeschool.com/users/1010458" target="_blank">CodesSchool</a>, -->
-        <!-- <a itemprop="url" href="https://www.khanacademy.org/profile/arturparkhisenko/" target="_blank">KhanAcademy</a>, -->
-        <!-- <a itemprop="url" href="https://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
-        <!-- <a itemprop="url" href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
-        <!-- <a itemprop="url" href="https://mva.microsoft.com/Profile.aspx?alias=2930238" target="_blank">
+		    <a itemprop="url" rel="me" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
+        <a itemprop="url" rel="me" href="https://codepen.io/arturparkhisenko/" target="_blank">CodePen</a>
+        <a itemprop="url" rel="me" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>
+        <!-- <a itemprop="url" rel="me" href="https://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
+        <!-- <a itemprop="url" rel="me" href="https://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
+        <!-- <a itemprop="url" rel="me" href="https://www.codeschool.com/users/1010458" target="_blank">CodesSchool</a>, -->
+        <!-- <a itemprop="url" rel="me" href="https://www.khanacademy.org/profile/arturparkhisenko/" target="_blank">KhanAcademy</a>, -->
+        <!-- <a itemprop="url" rel="me" href="https://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
+        <!-- <a itemprop="url" rel="me" href="https://www.codingame.com/profile/01abf9325ae7ca08193089b8fb500c4c7782821" target="_blank">CodinGame</a>, -->
+        <!-- <a itemprop="url" rel="me" href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
+        <!-- <a itemprop="url" rel="me" href="https://mva.microsoft.com/Profile.aspx?alias=2930238" target="_blank">
           <abbr title="Microsoft Virtual Academy">MVA</abbr>
         </a> -->
       </address>
