:wrench: typo fix, :up: deps, config and readme

--- a/index-src.html
+++ b/index-src.html
@@ -64,9 +64,7 @@
     <br/>
     <main role="main">
       <strong>&lt;/&gt;</strong>
-      <span itemprop="jobTitle">#engineer</span>&nbsp;
-      <!--  at <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> -->&amp;&amp; #geek
-      <!-- @ <a href="https://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> -->
+      <span itemprop="jobTitle">#engineer</span> &amp;&amp; #geek
     </main>
     <br/>
     <footer role="contentinfo">
@@ -74,11 +72,11 @@
         <!-- <a itemprop="skype" href="skype:arthur.parkhisenko?chat">Skype</a>, -->
         <a itemprop="url" rel="me" href="https://github.com/arturparkhisenko">GitHub</a>,
         <a itemprop="url" rel="me" href="https://ua.linkedin.com/in/artur-parkhisenko" target="_blank">LinkedIn</a>,
-        <a itemprop="url" rel="me" href="https://medium.com/@ikeagold" target="_blank">Medium</a>,
-        <a itemprop="url" rel="publisher" href="https://plus.google.com/115456555991025584178?rel=author" target="_blank" hidden>Google+</a>
+        <!-- <a itemprop="url" rel="me" href="https://medium.com/@ikeagold" target="_blank">Medium</a>, -->
+        <!-- <a itemprop="url" rel="publisher" href="https://plus.google.com/115456555991025584178?rel=author" target="_blank" hidden>Google+</a> -->
         <br/>
 		    <a itemprop="url" rel="me" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
-        <a itemprop="url" rel="me" href="https://codepen.io/arturparkhisenko/" target="_blank">CodePen</a>
+        <a itemprop="url" rel="me" href="https://codepen.io/arturparkhisenko/" target="_blank">CodePen</a>,
         <a itemprop="url" rel="me" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>
         <!-- <a itemprop="url" rel="me" href="https://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
         <!-- <a itemprop="url" rel="me" href="https://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
