--- a/index-src.html
+++ b/index-src.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Artur Parkhisenko - Engineer</title>
   <meta name="description" content="www. www always changes">
-  <meta name="keywords" content="Artur Parkhisenko, Engineer, Developer, Geek, JavaScript, Web Components, DevTools, HTML, JS, CSS, ikeagold">
+  <meta name="keywords" content="Artur Parkhisenko, Engineer, Developer, Geek, JavaScript, Web Components, DevTools, HTML, JS, CSS, ikeagold, gamer">
   <meta name="author" content="Artur Parkhisenko">
   <meta name="application-name" content="Artur Parkhisenko">
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: blob: 'unsafe-inline' 'unsafe-eval' wss://localhost:* https://arturparkhisenko.github.io https://source.unsplash.com https://images.unsplash.com https://unsplash.it https://www.google-analytics.com; connect-src 'self' wss://localhost:*; script-src 'self' 'unsafe-inline' data: https://www.google-analytics.com; style-src 'self'; child-src 'self'; manifest-src 'self'; media-src 'self' blob:; img-src 'self' data: https://source.unsplash.com https://images.unsplash.com https://unsplash.it https://www.google-analytics.com;">
 
@@ -26,16 +30,14 @@
   <meta name="twitter:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#8170a7">
+  <link href="https://plus.google.com/115456555991025584178" rel="author">
 
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#16161d">
+  <meta name="theme-color" content="#16161d">
 
   <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
 
@@ -46,9 +48,6 @@
   <noscript>
     <link rel="stylesheet" href="styles/main.min.css">
   </noscript>
-
-  <!-- <meta http-equiv="Expires" content="0">
-  <meta http-equiv="Cache-Control" content="public"> -->
 </head>
 
 <!-- they said i was a psycho... but look at me now, all up in the interwebs ;) -->
@@ -71,13 +70,15 @@
       <address>
         <!-- <a itemprop="skype" href="skype:arthur.parkhisenko?chat">Skype</a>, -->
         <a itemprop="url" rel="me" href="https://github.com/arturparkhisenko">GitHub</a>,
-        <a itemprop="url" rel="me" href="https://ua.linkedin.com/in/artur-parkhisenko" target="_blank">LinkedIn</a>,
-        <!-- <a itemprop="url" rel="me" href="https://medium.com/@ikeagold" target="_blank">Medium</a>, -->
-        <!-- <a itemprop="url" rel="publisher" href="https://plus.google.com/115456555991025584178?rel=author" target="_blank" hidden>Google+</a> -->
+        <a itemprop="url" rel="me" href="https://www.linkedin.com/in/artur-parkhisenko" target="_blank">LinkedIn</a>,
+        <a itemprop="url" rel="me" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
         <br/>
-		    <a itemprop="url" rel="me" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
+		    <!-- <a itemprop="url" rel="publisher" href="https://plus.google.com/115456555991025584178?rel=author" target="_blank" hidden>Google+</a> -->
+        <!-- <a itemprop="url" rel="me" href="https://medium.com/@ikeagold" target="_blank">Medium</a>, -->
+        <a itemprop="url" rel="me" href="https://gist.github.com/arturparkhisenko">GitHub Gists</a>,
         <a itemprop="url" rel="me" href="https://codepen.io/arturparkhisenko/" target="_blank">CodePen</a>,
-        <a itemprop="url" rel="me" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>
+        <a itemprop="url" rel="me" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>,
+        <a itemprop="url" rel="me" href="https://www.goodreads.com/user/show/63098005-artur-parkhisenko" target="_blank">Goodreads</a>
         <!-- <a itemprop="url" rel="me" href="https://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
         <!-- <a itemprop="url" rel="me" href="https://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
         <!-- <a itemprop="url" rel="me" href="https://www.codeschool.com/users/1010458" target="_blank">CodesSchool</a>, -->
@@ -90,21 +91,33 @@
         </a> -->
       </address>
       <!-- <br/> -->
-      <small><a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" title="CC0">the cake is a lie</a></small>
+      <small>
+        <a class="license" href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" title="CC0">the cake is a lie</a>
+        <div class="jack">
+          <a href="https://www.thevenusproject.com/" target="_blank" title="Life Is Strange">hole to another universe → <span class="hole"></span></a>
+        </div>
+      </small>
     </footer>
-    <div class="widgets">
-      <div class="devicelight" title="Device light status"></div>
-      <div class="battery"></div>
-    </div>
-    <div class="jack">
-      <a href="https://www.thevenusproject.com/" target="_blank" title="Life Is Strange">hole to another universe → <div class="hole"></div></a>
-    </div>
-    <div class="notice-colors">Click here to change colors!</div>
   </div>
 
-  <div class="notice-bg">Click here to change bg!</div>
-
   <script src="scripts/main.min.js" async defer></script>
+
+  <script>
+    // google-analytics--------------------------------------------------------
+    (function(i, s, o, g, r, a, m) {
+      i.GoogleAnalyticsObject = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments);
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m);
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    window.ga('create', 'UA-36592065-4', 'auto');
+    window.ga('send', 'pageview');
+  </script>
 
 </body>
 
