upd bg loading logic, noopener, deps :up:

--- a/index-src.html
+++ b/index-src.html
@@ -69,32 +69,32 @@
     <footer role="contentinfo">
       <address>
         <!-- <a itemprop="skype" href="skype:arthur.parkhisenko?chat">Skype</a>, -->
-        <a itemprop="url" rel="me" href="https://github.com/arturparkhisenko">GitHub</a>,
-        <a itemprop="url" rel="me" href="https://www.linkedin.com/in/artur-parkhisenko" target="_blank">LinkedIn</a>,
-        <a itemprop="url" rel="me" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
+        <a itemprop="url" rel="noopener" href="https://github.com/arturparkhisenko">GitHub</a>,
+        <a itemprop="url" rel="noopener" href="https://www.linkedin.com/in/artur-parkhisenko" target="_blank">LinkedIn</a>,
+        <a itemprop="url" rel="noopener" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
         <br/>
 		    <!-- <a itemprop="url" rel="publisher" href="https://plus.google.com/115456555991025584178?rel=author" target="_blank" hidden>Google+</a> -->
-        <!-- <a itemprop="url" rel="me" href="https://medium.com/@ikeagold" target="_blank">Medium</a>, -->
-        <a itemprop="url" rel="me" href="https://gist.github.com/arturparkhisenko">GitHub Gists</a>,
-        <a itemprop="url" rel="me" href="https://codepen.io/arturparkhisenko/" target="_blank">CodePen</a>,
-        <a itemprop="url" rel="me" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>,
-        <a itemprop="url" rel="me" href="https://www.goodreads.com/user/show/63098005-artur-parkhisenko" target="_blank">Goodreads</a>
-        <!-- <a itemprop="url" rel="me" href="https://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
-        <!-- <a itemprop="url" rel="me" href="https://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
-        <!-- <a itemprop="url" rel="me" href="https://www.codeschool.com/users/1010458" target="_blank">CodesSchool</a>, -->
-        <!-- <a itemprop="url" rel="me" href="https://www.khanacademy.org/profile/arturparkhisenko/" target="_blank">KhanAcademy</a>, -->
-        <!-- <a itemprop="url" rel="me" href="https://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
-        <!-- <a itemprop="url" rel="me" href="https://www.codingame.com/profile/01abf9325ae7ca08193089b8fb500c4c7782821" target="_blank">CodinGame</a>, -->
-        <!-- <a itemprop="url" rel="me" href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
-        <!-- <a itemprop="url" rel="me" href="https://mva.microsoft.com/Profile.aspx?alias=2930238" target="_blank">
+        <!-- <a itemprop="url" rel="noopener" href="https://medium.com/@ikeagold" target="_blank">Medium</a>, -->
+        <a itemprop="url" rel="noopener" href="https://gist.github.com/arturparkhisenko">GitHub Gists</a>,
+        <a itemprop="url" rel="noopener" href="https://codepen.io/arturparkhisenko/" target="_blank">CodePen</a>,
+        <a itemprop="url" rel="noopener" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>,
+        <a itemprop="url" rel="noopener" href="https://www.goodreads.com/user/show/63098005-artur-parkhisenko" target="_blank">Goodreads</a>
+        <!-- <a itemprop="url" rel="noopener" href="https://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
+        <!-- <a itemprop="url" rel="noopener" href="https://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
+        <!-- <a itemprop="url" rel="noopener" href="https://www.codeschool.com/users/1010458" target="_blank">CodesSchool</a>, -->
+        <!-- <a itemprop="url" rel="noopener" href="https://www.khanacademy.org/profile/arturparkhisenko/" target="_blank">KhanAcademy</a>, -->
+        <!-- <a itemprop="url" rel="noopener" href="https://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
+        <!-- <a itemprop="url" rel="noopener" href="https://www.codingame.com/profile/01abf9325ae7ca08193089b8fb500c4c7782821" target="_blank">CodinGame</a>, -->
+        <!-- <a itemprop="url" rel="noopener" href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
+        <!-- <a itemprop="url" rel="noopener" href="https://mva.microsoft.com/Profile.aspx?alias=2930238" target="_blank">
           <abbr title="Microsoft Virtual Academy">MVA</abbr>
         </a> -->
       </address>
       <!-- <br/> -->
       <small>
-        <a class="license" href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" title="CC0">the cake is a lie</a>
+        <a class="license" href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" rel="noopener" title="CC0">the cake is a lie</a>
         <div class="jack">
-          <a href="https://www.thevenusproject.com/" target="_blank" title="Life Is Strange">hole to another universe → <span class="hole"></span></a>
+          <a href="https://www.thevenusproject.com/" target="_blank" rel="noopener" title="Life Is Strange">hole to another universe → <span class="hole"></span></a>
         </div>
       </small>
     </footer>
