webpack4, postcss env, deps upd

--- a/index-src.html
+++ b/index-src.html
@@ -114,6 +114,7 @@
         <!-- <a itemprop="url" rel="noopener noreferrer" href="https://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
         <!-- <a itemprop="url" rel="noopener noreferrer" href="https://www.codingame.com/profile/01abf9325ae7ca08193089b8fb500c4c7782821" target="_blank">CodinGame</a>, -->
         <!-- <a itemprop="url" rel="noopener noreferrer" href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
+        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://www.hackerrank.com/arturparkhisenko" target="_blank">hackerrank</a>, -->
         <!-- <a itemprop="url" rel="noopener noreferrer" href="https://mva.microsoft.com/Profile.aspx?alias=2930238" target="_blank">
           <abbr title="Microsoft Virtual Academy">MVA</abbr>
         </a> -->
