--- a/index-src.html
+++ b/index-src.html
@@ -31,10 +31,12 @@
   <link href="https://plus.google.com/115456555991025584178" rel="author">
 
   <meta name="theme-color" content="#16161d">
+  <meta name="msapplication-TileColor" content="#ffc40d">
+  <link rel="manifest" href="site.webmanifest">
   <link rel="icon" sizes="16x16 32x32 48x48" href="favicon.ico">
   <link rel="icon" sizes="512x512" href="favicon-512x512.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#16161d">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#16161d">
 
   <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='https://cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
 
