--- a/index-src.html
+++ b/index-src.html
@@ -47,7 +47,7 @@
   <style>
     body,
     html {
-      height: 100%
+      height: 100%;
     }
 
     body {
@@ -61,7 +61,6 @@
       background: #222 url(images/dino_js.svg) no-repeat fixed 50%/contain content-box;
       color: #fafafa;
       font-size: 1em;
-      font-family: "Helvetica, Arial, sans-serif";
       font-family: BlinkMacSystemFont, -apple-system, ".SFNSDisplay-Regular", ".SFNSText-Regular", "SF UI Text", "San Francisco", "Noto Sans", "Helvetica Neue", Roboto, "Droid Sans", Oxygen, "Lucida Grande", "Segoe UI", "Fira Sans", Ubuntu, Cantarell, Helvetica, Arial, sans-serif;
       direction: ltr;
       -webkit-font-smoothing: antialiased;
@@ -72,7 +71,7 @@
       justify-content: center;
       -webkit-box-align: center;
       align-items: center;
-      line-height: 1.15
+      line-height: 1.15;
     }
   </style>
 
