--- a/index-src.html
+++ b/index-src.html
@@ -14,7 +14,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: blob: 'unsafe-inline' 'unsafe-eval' ws://localhost:* https://arturparkhisenko.github.io https://source.unsplash.com https://images.unsplash.com https://www.google-analytics.com; connect-src 'self' ws://localhost:*; script-src 'self' 'unsafe-inline' data: https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; child-src 'self'; worker-src 'self'; manifest-src 'self'; media-src 'self' blob:; img-src 'self' data: https://source.unsplash.com https://images.unsplash.com https://www.google-analytics.com;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: blob: 'unsafe-inline' 'unsafe-eval' ws://localhost:* https://arturparkhisenko.github.io https://source.unsplash.com https://images.unsplash.com https://www.google-analytics.com; connect-src 'self' ws://localhost:*; script-src 'self' 'unsafe-inline' data: https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; worker-src 'self'; manifest-src 'self'; media-src 'self' blob:; img-src 'self' data: https://source.unsplash.com https://images.unsplash.com https://www.google-analytics.com;">
 
   <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
   <link rel="canonical" href="https://arturparkhisenko.github.io/">
@@ -28,15 +28,14 @@
   <meta name="twitter:description" content="#engineer and #geek">
   <meta name="twitter:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
   <meta name="twitter:card" content="summary_large_image">
-  <link href="https://plus.google.com/115456555991025584178" rel="author">
 
   <meta name="theme-color" content="#16161d">
-  <meta name="msapplication-TileColor" content="#ffc40d">
+  <meta name="msapplication-TileColor" content="#16161d">
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" sizes="16x16 32x32 48x48" href="favicon.ico">
   <link rel="icon" sizes="512x512" href="favicon-512x512.png">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#16161d">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#9256ff">
 
   <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='https://cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
 
@@ -61,7 +60,7 @@
       background: #222 url(images/dino_js.svg) no-repeat fixed 50%/contain content-box;
       color: #fafafa;
       font-size: 1em;
-      font-family: BlinkMacSystemFont, -apple-system, ".SFNSDisplay-Regular", ".SFNSText-Regular", "SF UI Text", "San Francisco", "Noto Sans", "Helvetica Neue", Roboto, "Droid Sans", Oxygen, "Lucida Grande", "Segoe UI", "Fira Sans", Ubuntu, Cantarell, Helvetica, Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", Ubuntu, Cantarell, Helvetica, Arial, sans-serif;
       direction: ltr;
       -webkit-font-smoothing: antialiased;
       text-rendering: optimizeLegibility;
@@ -83,7 +82,6 @@
 <!-- they said i was a psycho... but look at me now, all up in the interwebs ;) -->
 
 <body itemscope itemtype="https://schema.org/Person">
-
   <div class="screen">
     <header>
       <h1 itemprop="name">Artur Parkhisenko</h1>
@@ -92,60 +90,29 @@
     <br/>
     <main>
       <strong>&lt;/&gt;</strong>
-      <span itemprop="jobTitle">Engineer</span> 📹, Geek 🎩, Speaker 📢, Open-Source ⚡️
+      <span itemprop="jobTitle"><abbr title="Video Playback Experience">VPE</abbr> Engineer</span> 📹 && Geek 🎩
     </main>
     <br/>
     <footer>
       <address>
-        <!-- <a itemprop="skype" href="skype:arthur.parkhisenko?chat">Skype</a>, -->
         <a itemprop="url" rel="noopener noreferrer" href="https://github.com/arturparkhisenko">GitHub</a> <a itemprop="url" rel="noopener noreferrer" href="https://gist.github.com/arturparkhisenko">(Gists)</a>,
         <a itemprop="url" rel="noopener noreferrer" href="https://www.linkedin.com/in/artur-parkhisenko" target="_blank">LinkedIn</a>,
         <a itemprop="url" rel="noopener noreferrer" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
         <br/>
-		    <!-- <a itemprop="url" rel="publisher" href="https://plus.google.com/115456555991025584178?rel=author" target="_blank" hidden>Google+</a> -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://medium.com/@ikeagold" target="_blank">Medium</a>, -->
+        <a itemprop="url" rel="noopener noreferrer" href="https://medium.com/@ikeagold" target="_blank">Medium</a>,
         <a itemprop="url" rel="noopener noreferrer" href="https://codepen.io/arturparkhisenko/" target="_blank">CodePen</a>,
         <a itemprop="url" rel="noopener noreferrer" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>,
         <a itemprop="url" rel="noopener noreferrer" href="https://www.goodreads.com/user/show/63098005-artur-parkhisenko" target="_blank">Goodreads</a>
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://vimeo.com/arturparkhisenko" target="_blank">Vimeo</a> -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://www.codeschool.com/users/1010458" target="_blank">CodesSchool</a>, -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://www.khanacademy.org/profile/arturparkhisenko/" target="_blank">KhanAcademy</a>, -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://www.codingame.com/profile/01abf9325ae7ca08193089b8fb500c4c7782821" target="_blank">CodinGame</a>, -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://www.hackerrank.com/arturparkhisenko" target="_blank">hackerrank</a>, -->
-        <!-- <a itemprop="url" rel="noopener noreferrer" href="https://mva.microsoft.com/Profile.aspx?alias=2930238" target="_blank">
-          <abbr title="Microsoft Virtual Academy">MVA</abbr>
-        </a> -->
       </address>
+      <p>I love <abbr title="Open Source Software">OSS</abbr> ⚡</p>
       <small>
-        <a class="license" href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" rel="noopener noreferrer" title="CC0">the cake is a lie</a>
-        <a href="https://www.thevenusproject.com/" target="_blank" rel="noopener noreferrer" title="Life Is Strange" class="jack">hole to another universe → <span class="hole"></span></a>
+        <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" rel="noopener noreferrer" title="CC0" class="small-urls license">🍰 ← the cake is a lie</a>
+        <a href="https://www.thevenusproject.com/" target="_blank" rel="noopener noreferrer" title="Life Is Strange" class="small-urls jack">hole to another universe → 🕳️</a>
       </small>
     </footer>
   </div>
 
   <script src="scripts/main.min.js" async defer></script>
-
-  <script>
-    // google-analytics--------------------------------------------------------
-    (function(i, s, o, g, r, a, m) {
-      i.GoogleAnalyticsObject = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments);
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m);
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    window.ga('create', 'UA-36592065-4', 'auto');
-    window.ga('send', 'pageview');
-  </script>
-
 </body>
 
 </html>
