change deps, async css approach, print css

--- a/index-src.html
+++ b/index-src.html
@@ -74,9 +74,7 @@
     }
   </style>
 
-  <noscript>
-    <link rel="stylesheet" href="styles/main.min.css">
-  </noscript>
+  <link rel="stylesheet" href="styles/main.min.css" media="print" onload="this.media='all'">
 </head>
 
 <!-- they said i was a psycho... but look at me now, all up in the interwebs ;) -->
