change stylelint ignore to have all other files, html markup with new csp, keywords, description

--- a/index-src.html
+++ b/index-src.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Artur Parkhisenko - Engineer</title>
   <meta name="description" content="www. www always changes">
-  <meta name="keywords" content="Artur Parkhisenko, Engineer, Developer, Geek, JavaScript, WebAssembly, Web Components, DevTools, HTML, JS, CSS, ikeagold, gamer">
+  <meta name="keywords" content="Artur Parkhisenko, Engineer, Video Engineer, Video Playback Experience, VPE, ビデオ, 📹, 🎮">
   <meta name="author" content="Artur Parkhisenko">
   <meta name="application-name" content="Artur Parkhisenko">
   <meta name="HandheldFriendly" content="True">
@@ -14,18 +14,18 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: blob: 'unsafe-inline' 'unsafe-eval' ws://localhost:* https://arturparkhisenko.github.io https://source.unsplash.com https://images.unsplash.com https://www.google-analytics.com; connect-src 'self' ws://localhost:*; script-src 'self' 'unsafe-inline' data: https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; worker-src 'self'; manifest-src 'self'; media-src 'self' blob:; img-src 'self' data: https://source.unsplash.com https://images.unsplash.com https://www.google-analytics.com;">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; worker-src 'self'; manifest-src 'self'; media-src 'self' blob:; object-src 'none'; base-uri 'none'; img-src 'self' data: https://source.unsplash.com https://images.unsplash.com;">
 
   <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
   <link rel="canonical" href="https://arturparkhisenko.github.io/">
   <meta name="url" content="https://arturparkhisenko.github.io/">
 
-  <meta property="og:title" content="Artur Parkhisenko - Personal Site">
-  <meta property="og:description" content="#engineer and #geek">
+  <meta property="og:title" content="Artur Parkhisenko - Engineer">
+  <meta property="og:description" content="Video Playback Experience Engineer 📹 ビデオ && 🎮">
   <meta property="og:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
   <meta property="og:url" content="https://arturparkhisenko.github.io/">
-  <meta name="twitter:title" content="Artur Parkhisenko - Personal Site">
-  <meta name="twitter:description" content="#engineer and #geek">
+  <meta name="twitter:title" content="Artur Parkhisenko - Engineer">
+  <meta name="twitter:description" content="Video Playback Experience Engineer 📹 ビデオ && 🎮">
   <meta name="twitter:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -87,8 +87,7 @@
     </header>
     <br/>
     <main>
-      <strong>&lt;/&gt;</strong>
-      <span itemprop="jobTitle"><abbr title="Video Playback Experience">VPE</abbr> Engineer</span> 📹 && Geek 🎩
+      <span itemprop="jobTitle"><abbr title="Video Playback Experience">VPE</abbr> Engineer</span> 📹 ビデオ && 🎮
     </main>
     <br/>
     <footer>
