--- a/index-src.html
+++ b/index-src.html
@@ -60,7 +60,7 @@
       background: #222 url(images/dino_js.svg) no-repeat fixed 50%/contain content-box;
       color: #fafafa;
       font-size: 1em;
-      font-family: -apple-system, BlinkMacSystemFont, "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", Ubuntu, Cantarell, Helvetica, Arial, sans-serif;
+      font-family: -apple-system, "blinkmacsystemfont", ".SFNSDisplay-Regular", ".SFNSText-Regular", "SF UI Text", "San Francisco", "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", "ubuntu", "cantarell", "helvetica", "arial", sans-serif;
       direction: ltr;
       -webkit-font-smoothing: antialiased;
       text-rendering: optimizeLegibility;
