change init href colors, print media styles, build system, removed some dependencies

--- a/index-src.html
+++ b/index-src.html
@@ -72,6 +72,16 @@
       align-items: center;
       line-height: 1.15;
     }
+
+    a,
+    a:visited {
+      color: #fff;
+    }
+
+    a:active,
+    a:hover {
+      color: #ffe;
+    }
   </style>
 
   <link rel="stylesheet" href="styles/main.min.css" media="print" onload="this.media='all'">
