change index to have the blog url, gulpfile reload, styles, background image query

--- a/index-src.html
+++ b/index-src.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Artur Parkhisenko - Engineer</title>
   <meta name="description" content="www. www always changes">
-  <meta name="keywords" content="Artur Parkhisenko, Engineer, Video Engineer, Video Playback Experience, VPE, ビデオ, 📹, 🎮">
+  <meta name="keywords" content="Artur Parkhisenko, Engineer, Video Engineer, Video Playback Experience, VPE, ビデオ, 📹">
   <meta name="author" content="Artur Parkhisenko">
   <meta name="application-name" content="Artur Parkhisenko">
   <meta name="HandheldFriendly" content="True">
@@ -21,11 +21,11 @@
   <meta name="url" content="https://arturparkhisenko.github.io/">
 
   <meta property="og:title" content="Artur Parkhisenko - Engineer">
-  <meta property="og:description" content="Video Playback Experience Engineer 📹 ビデオ && 🎮">
+  <meta property="og:description" content="Video Playback Experience Engineer 📹 ビデオ">
   <meta property="og:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
   <meta property="og:url" content="https://arturparkhisenko.github.io/">
   <meta name="twitter:title" content="Artur Parkhisenko - Engineer">
-  <meta name="twitter:description" content="Video Playback Experience Engineer 📹 ビデオ && 🎮">
+  <meta name="twitter:description" content="Video Playback Experience Engineer 📹 ビデオ">
   <meta name="twitter:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -87,8 +87,6 @@
   <link rel="stylesheet" href="styles/main.min.css" media="print" onload="this.media='all'">
 </head>
 
-<!-- they said i was a psycho... but look at me now, all up in the interwebs ;) -->
-
 <body itemscope itemtype="https://schema.org/Person">
   <div class="screen">
     <header>
@@ -97,23 +95,24 @@
     </header>
     <br/>
     <main>
-      <span itemprop="jobTitle"><abbr title="Video Playback Experience">VPE</abbr> Engineer</span> 📹 ビデオ && 🎮
+      <span itemprop="jobTitle"><abbr title="Video Playback Experience">VPE</abbr> Engineer</span> 📹 ビデオ
+      <p>I love <abbr title="Open Source Software">OSS</abbr> ⚡</p>
     </main>
     <br/>
     <footer>
       <address>
-        <a itemprop="url" rel="noopener noreferrer" href="https://github.com/arturparkhisenko">GitHub</a> <a itemprop="url" rel="noopener noreferrer" href="https://gist.github.com/arturparkhisenko">(Gists)</a>,
-        <a itemprop="url" rel="noopener noreferrer" href="https://www.linkedin.com/in/artur-parkhisenko" target="_blank">LinkedIn</a>,
-        <a itemprop="url" rel="noopener noreferrer" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
+        <a itemprop="url" rel="noopener" href="https://github.com/arturparkhisenko">GitHub</a> <a itemprop="url" rel="noopener" href="https://gist.github.com/arturparkhisenko">(Gists)</a>,
+        <a itemprop="url" rel="noopener" href="https://arturparkhisenko.github.io/blog/">My Blog</a>,
+        <a itemprop="url" rel="noopener" href="https://www.linkedin.com/in/artur-parkhisenko" target="_blank">LinkedIn</a>,
+        <a itemprop="url" rel="noopener" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
         <br/>
-        <a itemprop="url" rel="noopener noreferrer" href="https://codepen.io/arturparkhisenko/" target="_blank">CodePen</a>,
-        <a itemprop="url" rel="noopener noreferrer" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>,
-        <a itemprop="url" rel="noopener noreferrer" href="https://www.goodreads.com/user/show/63098005-artur-parkhisenko" target="_blank">Goodreads</a>
+        <a itemprop="url" rel="noopener" href="https://codepen.io/arturparkhisenko" target="_blank">CodePen</a>,
+        <a itemprop="url" rel="noopener" href="https://speakerdeck.com/arturparkhisenko" target="_blank">Speaker Deck</a>,
+        <a itemprop="url" rel="noopener" href="https://www.goodreads.com/user/show/63098005-artur-parkhisenko" target="_blank">Goodreads</a>
       </address>
-      <p>I love <abbr title="Open Source Software">OSS</abbr> ⚡</p>
       <small>
-        <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" rel="noopener noreferrer" title="CC0" class="small-urls license">🍰 ← the cake is a lie</a>
-        <a href="https://www.thevenusproject.com/" target="_blank" rel="noopener noreferrer" title="Life Is Strange" class="small-urls jack">hole to another universe → 🕳️</a>
+        <span class="small-urls" title="a weekly random image is on the background">the cake is a lie → 🍰</span>
+        <a href="https://www.thevenusproject.com/" target="_blank" rel="noopener" title="Life Is Strange" class="small-urls">hole to another universe → 🕳️</a>
       </small>
     </footer>
   </div>
