remove transition, opacity,  unneeded critical css

--- a/index-src.html
+++ b/index-src.html
@@ -59,7 +59,7 @@
       padding: 0;
       background: #222 url(images/dino_js.svg) no-repeat fixed 50%/contain content-box;
       color: #fafafa;
-      font-size: 1em;
+      font-size: 1rem;
       font-family: -apple-system, "blinkmacsystemfont", ".SFNSDisplay-Regular", ".SFNSText-Regular", "SF UI Text", "San Francisco", "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", "ubuntu", "cantarell", "helvetica", "arial", sans-serif;
       direction: ltr;
       -webkit-font-smoothing: antialiased;
@@ -76,11 +76,6 @@
     a,
     a:visited {
       color: #fff;
-    }
-
-    a:active,
-    a:hover {
-      color: #ffe;
     }
   </style>
 
