--- a/index-src.html
+++ b/index-src.html
@@ -77,6 +77,10 @@
     a:visited {
       color: #fff;
     }
+
+    .screen {
+      background-color: #1d1d1d;
+    }
   </style>
 
   <link rel="stylesheet" href="styles/main.min.css" media="print" onload="this.media='all'">
