change ua file name

--- a/src/utils/index.html
+++ b/src/utils/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <ul>
-    <li><a href="./wmua.html">What is my User Agent</a></li>
+    <li><a href="./ua.html">What is my User Agent</a></li>
   </ul>
 
 </body>
