change config, comments, remove sw

--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,7 @@
     }
   </style>
 
-  <!-- <link rel="stylesheet" href="styles/main.min.css" media="print" onload="this.media='all'"> -->
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="main.css" media="print" onload="this.media='all'" />
 </head>
 
 <body itemscope itemtype="https://schema.org/Person">
@@ -120,7 +119,6 @@
     </footer>
   </div>
 
-  <!-- <script src="scripts/main.min.js" async defer></script> -->
   <script type="module" src="main.js"></script>
 </body>
 
